<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.MainActivity">
    <item
        android:id="@+id/program_item"
        android:icon="@drawable/music_unselected24dp"
        android:title="@string/program" />
    <item
        android:id="@+id/map_item"
        android:icon="@drawable/map_unselected_24dp"
        android:title="@string/map" />

<!--
    <item
        android:id="@+id/favorite_item"
        android:icon="@mipmap/favorit_menu"
        android:title="@string/favorits" />
-->

    <item
        android:id="@+id/brefunk_item"
        android:icon="@drawable/brefunk_unselected_24dp"
        android:title="@string/brefunk" />

    <item
        android:id="@+id/more_item"
        android:icon="@drawable/more_unselected_24dp"
        android:title="@string/more" />

</menu>
